# q_simulation_interfaces

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package.xml  q_simulation_plugins.xml
include/q_simulation_interfaces/: simulation_panel.h  simulation_panel.hpp
resource/: my_widget.ui  sim_widget.ui
src/: main.cpp  my_widget.cpp  my_widget.hpp  service.h  sim_widget.ui  simulation_panel.cpp  simulation_widget.cpp  simulation_widget.h  simulation_widget.hpp  standalone_main.cpp  stringToKeys.h  string_to_keys.h  vector_utils.hpp
