<?xml version="1.0"?>
<package format="3">
  <name>q_simulation_interfaces</name>
  <version>0.0.1</version>
  <description>Simulation interface gui</description>

  <maintainer email="michal.pelka@robotec.ai">Michał Pełka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>visualization_msgs</depend>
  <depend>simulation_interfaces</depend>
  <depend>interactive_markers</depend>

  <exec_depend>qt5-qmake</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/q_simulation_plugins.xml"/>
  </export>
</package>
